Update wall and map photos

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
   </section>
 
-    <img src="img/IMG_0677.jpg" class="img-body" alt="House that has been vaccinated.">
+    <img src="img/Wall pic w caption 2.jpg" class="img-body" alt="House that has been vaccinated.">
 
     <section class="col-sm-8">
     <h2 id="polio">Polio: the last mile</h2>
