--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h5>by <a href="http://epod.cid.harvard.edu/">Evidence for Policy Design</a></h5>
       <h5><span id="datetime">August 2016</span></h5>
 
-  <img src="img/main pic w copyright.jpeg" class="img-body" alt="Polio vaccine.">
+  <img src="img/main pic w copyright.jpg" class="img-body" alt="Polio vaccine.">
   
     <section class="col-sm-8 introduction">
       <p>In 2014, roving health workers swept through neighbourhoods in Lahore, Pakistan on a drive to achieve complete immunization in one of polio’s last remaining bastions. Meanwhile, their managers struggled to track their progress using antiquated methods. </p>
