change in html and css, for the long quotes, the buttons,the picture, the abstract and the date

--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
       <h1>BCURE Case: Motivating public servant performance in Punjab, Pakistan</h1>
       <hr>
       <h5>by <a href="http://epod.cid.harvard.edu/">Evidence for Policy Design</a></h5>
-      <h5><span id="datetime">August 2016</span></h5>
+      <h5><span id="datetime">September 2016</span></h5>
 
   <img src="img/Main pic w copyright.jpg" class="img-body" alt="Polio vaccine.">
   
     <section class="col-sm-8 introduction">
-      <p>In 2014, roving health workers swept through neighbourhoods in Lahore, Pakistan on a drive to achieve complete immunization in one of polio’s last remaining bastions. Meanwhile, their managers struggled to track their progress using antiquated methods. </p>
+      <p class="itl">In 2014, roving health workers swept through neighbourhoods in Lahore, Pakistan on a drive to achieve complete immunization in one of polio’s last remaining bastions. Meanwhile, their managers struggled to track their progress using antiquated methods. </p>
 
-      <p>In this context, a team of researchers and policymakers conducted a pilot project, testing if a simple mobile phone app and online dashboard could open up a new flow of data between civil servants at different levels. This gave managers an improved means to monitor the tempo and geographical coverage of vaccinations and use that information to motivate higher performance among health workers. </p>
+      <p class="itl">In this context, a team of researchers and policymakers conducted a pilot project, testing if a simple mobile phone app and online dashboard could open up a new flow of data between civil servants at different levels. This gave managers an improved means to monitor the tempo and geographical coverage of vaccinations and use that information to motivate higher performance among health workers. </p>
 
-      <p>This case study focuses on how quality information, strategically employed, can swiftly improve governance. It illustrates how a relatively simple tool – adaptable far beyond the realm of public health by leveraging insights from behavioural economics and management science – can overcome information bottlenecks between government actors, resulting in better service delivery for the poor. </p>
+      <p class="itl">This case study focuses on how quality information, strategically employed, can swiftly improve governance. It illustrates how a relatively simple tool – adaptable far beyond the realm of public health by leveraging insights from behavioural economics and management science – can overcome information bottlenecks between government actors, resulting in better service delivery for the poor. </p>
 
 
     </section>
@@ -120,27 +120,27 @@
             </th>
           <th id="china">
             <p>China</p>
-            <p><img src="img/image02.jpg" alt="China" width=50></p>
+            <p class="height--50"><img src="img/image02.jpg" alt="China" width=50></p>
             <p><em>Anaemia in school children</em></p>
             </th>
           <th id="indonesia">
             <p>Indonesia</p>
-            <p><img src="img/image01.jpg" alt="Indonesia" width=50></p>
+            <p class="height--50"><img src="img/image01.jpg" alt="Indonesia" width=50></p>
             <p><em>Community health</em></p>
           </th>
           <th id="pakistan">
             <p>Pakistan</p>
-            <p><img src="img/image04.jpg" alt="Pakistan" width=50></p>
+            <p class="height--50"><img src="img/image04.jpg" alt="Pakistan" width=50></p>
             <p><em>Tax revenues</em></p>
           </th>
           <th id="india">
             <p>India</p>
-            <p><img src="img/image03.jpg" alt="India" width=50></p>
+            <p class="height--50"><img src="img/image03.jpg" alt="India" width=50></p>
             <p><em>Test scores among children</em></p>
           </th>
-
+           
         </table>
-
+<small>Finan, Olken and Pande 2015, <a href="http://scholar.harvard.edu/rpande/publications/personnel-economics-state">The Personnel Economics of the State</a>, in The Handbook of Field Experiments   </small>
       <div class="rwanda widgetText">
         <p><b>Rwanda</b></p>
         <p><b>Method</b>: RCT</p>
@@ -243,9 +243,10 @@
       <p>Taking a close look at the project not only showcases an exciting new tool with applications far beyond public health; it reveals the critical importance of the exchange of quality information in optimizing service delivery in developing countries.</p>
 
   </section>
-
-    <img src="img/Wall pic w caption 2.jpg" class="img-body" alt="House that has been vaccinated.">
-
+<figure>
+    <img src="img/Wall-pic.jpg" class="img-body" alt="House that has been vaccinated.">
+    <figcaption>Health workers tracked progress by making chalk notations on walls of the houses they visited</figcaption>
+</figure>
     <section class="col-sm-8">
     <h2 id="polio">Polio: the last mile</h2>
 
@@ -325,7 +326,7 @@
     <h2 id="results">Results</h2>
     <ul>
       <li>The trial showed that this system can bridge the pay-for-performance information gap very quickly.</li>
-      <li>Data from the mobile phones showed that a performance bonus encouraged workers to complete 15 to 17 percent more vaccinations than workers that were just being monitored and not positively incentivized.</li>
+     <li>Data from the mobile phones showed that a performance bonus encouraged workers to complete 15 to 17 percent more vaccinations than workers that were just being monitored and not positively incentivized.</li>
       <li>The system gave management better monitoring tools.</li>
       <li>Tailoring vaccinations according to personal preferences increased the likelihood of adopting a more balanced schedule by 33 percent.</li>
       <li>In the few cases where parents didn’t allow their children to be vaccinated, the online dashboard allowed policymakers to identify those households for follow-up.</li>
@@ -350,7 +351,21 @@
     
     <p>Callen and his team intend to use the maps, not only to encourage better coverage, but also to test how policymakers use research evidence. As part of the Assessment activity of the BCURE programme, Callen and EPoD co-director Asim Khwaja have been experimenting with presenting civil servants at Pakistan’s National School of Public Policy with research evidence and testing how they update their opinions. Laboratory exercises can only tell them so much, however. “What we want to do is figure out, how does providing policymakers with real information change how they take real action?” says Callen. “Imagine going to the guy in the health ministry whose job it is to guarantee vaccination, giving him a map and saying, <em>Here’s where vaccinations have happened hundreds of times, here’s where they haven’t happened at all – now you redeploy your resources accordingly.</em> Then measuring the outcome.”</p>
 
-    <p>Such a test could reveal the extent to which policymakers use research evidence in the real world, and suggest ways to increase such use.</p>
+    <p>Such a test could reveal the extent to which policymakers use research evidence in the real world, and suggest ways to increase such use.    <button type='button' 
+                class='btn btn-link btn-inline' 
+                data-placement='bottom' 
+                data-toggle='popover'
+                data-html='true' 
+                data-content='
+                  <blockquote>
+                    <p>New policies and new information can be intelligently targeted at civil servants who are identified by personality tests as more intrinsically motivated. Such policies might provide useful complements to more traditional strategies - such as increasing worker monitoring or performance incentives - and provide the basis for additional, cost-effective policies for better public health.</p>
+
+                    <footer>Michael Callen and Arman Rezaee, <em>How can personality tests improve the health service in Pakistan</em>, <a href="https://www.theguardian.com/global-development-professionals-network/2014/sep/09/personality-test-public-health-pakistan" target="_blank">The Guardian</a>, 9 September 2014</footnote>
+                    </blockquote>
+
+                '>New policies, new information <span class="glyphicon glyphicon-new-window"></span>
+
+        </button></p>
 
     <h2 id="opening">Opening up data, big and small</h2>
 
@@ -375,11 +390,11 @@
         <p>This pilot project – along with several others under the BCURE umbrella – have shown that gathering small data in developing countries can be done easily on the ground in real time, and the result can be improved implementation of programs. This not only opens opportunities to more effectively identify problems: it also increases, perhaps substantially, the number of options available for dealing with them. The passive analysis of data is vital, but there are now new doors for the active design of systems and incentives based on the possibilities opened by new data technologies. Increasing the flow of data can not only add to what we know about the world, it can give us more options to improve it. &#9632; </p>
 
         </section>
-
+<!--
       <section class="col-sm-3 pull-right aside">
       <div>
         <button type='button' 
-                class='btn btn-lg' 
+                class='btn btn-inline' 
                 data-placement='left' 
                 data-toggle='popover'
                 data-html='true' 
@@ -394,7 +409,7 @@
 
         </button>
       </div>
-    </section>        
+    </section>   -->     
 
     <section class="col-sm-8">
 
