--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li>
               <a href="#opening">Opening up data, big and small</a>
             </li>
+            <h5><a href="http://epod.cid.harvard.edu/bcure#widget-6">Return to the BCURE Pilot Project Cases</a></h5>
             <br>
             <br>
             <br>
