--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
   <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="http://epod.cid.harvard.edu/" target="_blank"><img alt="EPoD logo" src="img/logo.png" class="img-sidebar"></a>
+            <a href="http://epod.cid.harvard.edu/" target="_blank"><img alt="EPoD logo" src="img/HKSlogo_EPoD_digitalLR.png" class="img-sidebar"></a>
           </li>
           <div id="sidestyle">
             <li>
